compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__list_spread_with_no_tail_in_the_middle_of_a_list.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 921
expression: "\npub fn main() -> Nil {\n  let xs = [1, 2, 3]\n  [1, 2, .., 3 + 3, 4]\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() -> Nil {
  let xs = [1, 2, 3]
  [1, 2, .., 3 + 3, 4]
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:4:10
  │
4 │   [1, 2, .., 3 + 3, 4]
  │          ^^ I was expecting a value after this spread

If a list expression has a spread then a tail must also be given.
