compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__missing_target_and_bracket.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 740
expression: "\n@target(\npub fn one() {}"
snapshot_kind: text
---
----- SOURCE CODE

@target(
pub fn one() {}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:8
  │
2 │ @target(
  │        ^ I was expecting a target name after this

Try `erlang`, `javascript`.
