compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__nested_block.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 669
expression: "{ 1 { 1.0 2.0 } 3 }"
snapshot_kind: text
---
[
    Expression(
        Block {
            location: SrcSpan {
                start: 0,
                end: 19,
            },
            statements: [
                Expression(
                    Int {
                        location: SrcSpan {
                            start: 2,
                            end: 3,
                        },
                        value: "1",
                        int_value: 1,
                    },
                ),
                Expression(
                    Block {
                        location: SrcSpan {
                            start: 4,
                            end: 15,
                        },
                        statements: [
                            Expression(
                                Float {
                                    location: SrcSpan {
                                        start: 6,
                                        end: 9,
                                    },
                                    value: "1.0",
                                    float_value: LiteralFloatValue(
                                        1.0,
                                    ),
                                },
                            ),
                            Expression(
                                Float {
                                    location: SrcSpan {
                                        start: 10,
                                        end: 13,
                                    },
                                    value: "2.0",
                                    float_value: LiteralFloatValue(
                                        2.0,
                                    ),
                                },
                            ),
                        ],
                    },
                ),
                Expression(
                    Int {
                        location: SrcSpan {
                            start: 16,
                            end: 17,
                        },
                        value: "3",
                        int_value: 3,
                    },
                ),
            ],
        },
    ),
]
